.happypack/s-1087089234
/Users/dongfanai/Desktop/project/kr-admin/src/Containers/Permission/Operations/Createdialog/index.js: Unexpected token (151:121)
SyntaxError: /Users/dongfanai/Desktop/project/kr-admin/src/Containers/Permission/Operations/Createdialog/index.js: Unexpected token (151:121)
[0m [90m 149 | [39m							inline[33m=[39m{[36mtrue[39m}
 [90m 150 | [39m					[33m/[39m[33m>[39m
[31m[1m>[22m[39m[90m 151 | [39m					[33m<[39m[33mKrField[39m style[33m=[39m{{width[33m:[39m[35m300[39m[33m,[39mmarginLeft[33m:[39m[35m40[39m[33m,[39mmarginBottom[33m:[39m[35m16[39m}}  name[33m=[39m[32m"enableflag"[39m component[33m=[39m[32m"group"[39m label[33m=[39m[32m"ç±»åž‹"[39m redValue[33m:[39m[32m'ç¼–ç ä¸ºå¿…å¡«é¡¹'[39m}}
 [90m     | [39m					                                                                                                                    [31m[1m^[22m[39m
 [90m 152 | [39m							 requireLabel[33m=[39m{[36mtrue[39m}[33m>[39m
 [90m 153 | [39m	                	[33m<[39m[33mKrField[39m style[33m=[39m{{marginLeft[33m:[39m[35m40[39m}} name[33m=[39m[32m"enableflag"[39m label[33m=[39m[32m"èœå•"[39m type[33m=[39m[32m"radio"[39m value[33m=[39m[32m"MENU"[39m checked[33m=[39m{[36mtrue[39m}[33m/[39m[33m>[39m
 [90m 154 | [39m	               		 [33m<[39m[33mKrField[39m name[33m=[39m[32m"enableflag"[39m label[33m=[39m[32m"æ“ä½œ"[39m type[33m=[39m[32m"radio"[39m value[33m=[39m[32m"OPERATION"[39m [33m/[39m[33m>[39m[0m
    at Parser.pp$5.raise (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:4246:13)
    at Parser.pp.unexpected (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:1627:8)
    at Parser.pp$8.jsxParseIdentifier (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6193:10)
    at Parser.pp$8.jsxParseNamespacedName (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6209:20)
    at Parser.pp$8.jsxParseAttribute (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6299:20)
    at Parser.pp$8.jsxParseOpeningElementAt (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6311:31)
    at Parser.pp$8.jsxParseElementAt (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6333:29)
    at Parser.pp$8.jsxParseElementAt (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6346:30)
    at Parser.pp$8.jsxParseElementAt (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6346:30)
    at Parser.pp$8.jsxParseElement (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6388:15)
    at Parser.parseExprAtom (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6400:21)
    at Parser.pp$3.parseExprSubscripts (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3331:19)
    at Parser.pp$3.parseMaybeUnary (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3311:19)
    at Parser.pp$3.parseExprOps (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3241:19)
    at Parser.pp$3.parseMaybeConditional (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3218:19)
    at Parser.pp$3.parseMaybeAssign (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3181:19)
    at Parser.parseMaybeAssign (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:5655:24)
    at Parser.pp$3.parseParenAndDistinguishExpression (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3660:26)
    at Parser.pp$3.parseExprAtom (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3545:19)
    at Parser.parseExprAtom (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6402:22)
    at Parser.pp$3.parseExprSubscripts (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3331:19)
    at Parser.pp$3.parseMaybeUnary (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3311:19)